--- a/client/layout/layout.less
+++ b/client/layout/layout.less
@@ -1,5 +1,5 @@
 body {
-  background-color: #E9EAED;
+  background-color: #f3f3f3;
 }
 
 /*------------------------
@@ -11,9 +11,7 @@ body {
     padding-top: 46px;
   }
 }
-.container {
-  padding-left: 240px;
-}
+
 
 @media only screen and (max-width : 992px) {
   header, main, footer {
@@ -38,6 +36,15 @@ body {
     margin-left: 10px;
   }
 }
+
+/*----------------------
+      Sub Menu Top
+-----------------------*/
+.subTopBar {
+  background: #fff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
 
 /*--------------------
       Tab Slide
