--- a/client/layout/layout.less
+++ b/client/layout/layout.less
@@ -1,64 +1,16 @@
 body {
-  background-color: #f3f3f3;
+  background-color: #e9eaed;
 }
-
-/*------------------------
-  Menu Sidebar ben trai
--------------------------*/
-.sidebar-left {
-  ul.side-nav.fixed {
-    z-index: 997;
-    padding-top: 46px;
-  }
-}
-
-
-@media only screen and (max-width : 992px) {
-  header, main, footer {
-    padding-left: 0;
-  }
-}
-
-/*------------------
-  Menu Navbar Top
---------------------*/
-.navbar-fixed {
-  height: 46px;
-  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-    height: 46px;
-    line-height: 46px;
-  }
-  nav .nav-wrapper i {
-    font-size: 1.5rem;
-  }
-  nav .brand-logo {
-    font-size: 1.6rem;
-    margin-left: 10px;
-  }
-}
-
-/*----------------------
-      Sub Menu Top
------------------------*/
-.subTopBar {
+.navbar {
   background: #fff;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
-
-
-/*--------------------
-      Tab Slide
-----------------------*/
-.tabs {
-  li.tab {
-    a {
-      color: #1976d2;
-      &:hover{
-        color: #64b5f6;
-      }
-    }
-  }
-  .indicator {
-    background-color: #2196f3;
+.mainApp {
+  margin-top: 70px;
+  .content {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 10px 20px;
   }
 }
