--- a/client/layout/templates.html
+++ b/client/layout/templates.html
@@ -1,40 +1,56 @@
 <head>
     <meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
-    <link rel="shortcut icon" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png"/>
 </head>
 
 <template name="AppLayout">
     <!--Let browser know website is optimized for mobile-->
-
-    <section class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper blue darken-2">
-                <a href="#!" class="brand-logo">Yolosh</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="sass.html"><i class="mdi-action-search"></i></a></li>
-                    <li><a href="components.html"><i class="mdi-action-view-module"></i></a></li>
-                    <li><a href="javascript.html"><i class="mdi-social-notifications-none"></i></a></li>
-                    <li><a href="mobile.html"><i class="mdi-navigation-more-vert"></i></a></li>
-                    <li></li>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Yolosh</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Collections</a></li>
+                    <li><a href="#">Market Place</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {{> loginButtons}} <!-- here -->
                 </ul>
             </div>
-        </nav>
-    </section>
+        </div>
+    </nav>
 
+    <div class="container mainApp">
+        <div class="row">
+            <section class="col-lg-3 col-md-4 hidden-sm hidden-xs">
 
-    <section class="container">
-      {{> loginButtons}}
-        <article>
-          {{> yield}}
-        </article>
-
-    </section>
+                <div class="content">
+                {{> loginButtons}}
+                {{> yield "panel-left"}}
+                </div>
+            </section>
+            <section class="col-lg-7 col-md-8 col-sm-12">
+                <div class="content">
+                    {{> yield}}
+                </div>
+            </section>
+        </div>
+    </div>
 
     <footer>
-      {{> yield "footer"}}
+        {{> yield "footer"}}
     </footer>
 </template>
 
 <template name="Loading">
-    Loading...!!!
+    Loading Yolosh...!!!
 </template>
