--- a/client/layout/templates.html
+++ b/client/layout/templates.html
@@ -1,56 +1,288 @@
 <head>
     <meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
     <link rel="shortcut icon" href="/favicon.png"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,700,300' rel='stylesheet'
+          type='text/css'>
 </head>
 
 <template name="AppLayout">
     <!--Let browser know website is optimized for mobile-->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Yolosh</a>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Collections</a></li>
-                    <li><a href="#">Market Place</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {{> loginButtons}} <!-- here -->
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mainApp">
-        <div class="row">
-            <section class="col-lg-3 col-md-4 hidden-sm hidden-xs">
-
-                <div class="content">
-                {{> loginButtons}}
-                {{> yield "panel-left"}}
-                </div>
-            </section>
-            <section class="col-lg-7 col-md-8 col-sm-12">
-                <div class="content">
-                    {{> yield}}
-                </div>
-            </section>
-        </div>
-    </div>
-
-    <footer>
-        {{> yield "footer"}}
-    </footer>
+    {{>sideBar}}
+    {{>mainApp}}
 </template>
 
+<template name="mainApp">
+    <div id="main-app">
+        <div id="header-fix">
+            <div id="header-mainApp">
+
+                <div id="header-left" class="pull-left">
+                    <h1 class="title">My Collections</h1>
+                </div>
+
+                <div id="header-right" class="pull-right">
+
+                    <div id="settings-header" class="pull-right icon">
+                        <ul>
+                            <li><a href="#">Settings</a></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </div>
+
+                    <div id="notify-header" class="pull-right icon">
+                        <ul>
+                            <li><a href="#">Notify 1</a></li>
+                            <li><a href="#">Notify 2</a></li>
+                            <li><a href="#">Notify 3</a></li>
+                        </ul>
+                    </div>
+
+                    <div id="create-button" class="pull-right icon">
+                        <a href="#"></a>
+                    </div>
+
+                    <div id="user-header" class="pull-right">
+                        <a href="#">
+                            <span class="pull-left">Nguyen Tung</span>
+                            <img src="images/user-icon.png" class="icon" width="28px" height="28px" alt="Tung Nguyen"/>
+                        </a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div id="content-app">
+            <div id="my-collections">
+
+                <div id="bookmarked" class="organization">
+                    <h4 class="header-organization">
+                        <img src="images/bookmark.png" alt="bookmark"/> Bookmarked
+                    </h4>
+
+                    <ul class="collections">
+                        <li class="collection">
+                            <span class="star active">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star active">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div id="lap-trinh-organization" class="organization">
+                    <h4 class="header-organization">
+                        <img src="images/collection.png" alt="bookmark"/>Lập trình
+                    </h4>
+
+                    <ul class="collections">
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="kinh-doanh-organization" class="organization">
+                    <h4 class="header-organization">
+                        <img src="images/collection.png" alt="bookmark"/>Kinh doanh
+                    </h4>
+
+                    <ul class="collections">
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                        <li class="collection">
+                            <span class="star">
+                                <i class="icon"></i> 150
+                            </span>
+                            <i class="bookmark"></i>
+
+                            <div class="title-collection">
+                                <p>Học tiếng anh</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</template>
+<template name="sideBar">
+    <div id="sidebar">
+        <div id="header-sidebar">
+            <a href="#" class="logo-sidebar">
+                <img src="images/logo-simple.png" alt="Yolosh" class="pull-left"/> <span>Yolosh</span>
+            </a>
+            <span class="search-sidebar"></span>
+        </div>
+        <div id="main-sidebar">
+            <div id="create-collection">
+                <a href="#">Create Collection</a>
+            </div>
+
+            <div id="menu-sidebar">
+                <ul class="list-understyle">
+                    <li class="timeline-sidebar"><a href="#"><i class="icon"></i>Timeline</a></li>
+                    <li class="collection-sidebar active"><a href="#"><i class="icon"></i>Collections</a></li>
+                    <li class="explorer-sidebar"><a href="#"><i class="icon"></i>Explorer</a></li>
+
+                </ul>
+            </div>
+
+            <div id="organization-sidebar">
+                <div class="header-organization-sidebar">
+                    My Organization
+                </div>
+                <ul class="list-understyle">
+                    <li>
+                        <a href="#"><img src="images/icons/Owl.png" alt=""/>Lập trình</a>
+                        <span class="count">17</span>
+                        <div class="config">
+                            <a href="#"><i class="addUser"></i></a>
+                            <a href="#"><i class="edit"></i></a>
+                        </div>
+                    </li>
+                    <li><a href="#"><img src="images/icons/Cup.png" alt=""/>Kinh doanh</a><span class="count">0</span></li>
+                    <li class="active"><a href="#"><img src="images/icons/Bad-Pig.png" alt=""/>Văn học</a><span class="count">6</span></li>
+                    <li><a href="#"><img src="images/icons/GoPro-.png" alt=""/>Phim</a><span class="count">12</span></li>
+                    <li><a href="#"><img src="images/icons/Space-Rocket.png" alt=""/>Nghiên cứu</a><span class="count">8</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</template>
 <template name="Loading">
     Loading Yolosh...!!!
 </template>
